# kata

./: .gitignore  Cargo.toml  IDEAS.md  README.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml
crates/kata-core/: Cargo.toml
crates/kata-core/src/: compare.rs  diff.rs  documents.rs  ids.rs  lib.rs
crates/kata-demo/: Cargo.toml
crates/kata-demo/src/: lib.rs
crates/kata-jj/: Cargo.toml
crates/kata-jj/src/: anchor.rs  backend.rs  cli.rs  diff.rs  error.rs  lib.rs  libjj.rs
crates/kata-jj/tests/: fixture.rs
crates/kata-mcp/: Cargo.toml
crates/kata-mcp/skills/: review.md
crates/kata-mcp/src/: dispatcher.rs  lib.rs  tools.rs
crates/kata-server/: Cargo.toml  build.rs
crates/kata-server/src/: config.rs  embedded.rs  error.rs  lib.rs  main.rs  service.rs  state.rs
crates/kata-server/src/routes/: annotations.rs  author.rs  comments.rs  events.rs  mod.rs  responses.rs  reviews.rs  sessions.rs
crates/kata-server/tests/: http.rs
crates/kata-service/: Cargo.toml
crates/kata-service/src/: error.rs  events.rs  lib.rs
crates/kata-storage/: Cargo.toml
crates/kata-storage/migrations/: V001__init.sql  V002__review_number_and_name.sql  V003__review_archived_at.sql  V004__review_visits.sql  V005__comment_review_wide.sql  V006__rename_flag_other_to_question.sql  V007__fix_review_visits_fk.sql  V008__annotations.sql  V009__comment_columns.sql
crates/kata-storage/src/: archive.rs  error.rs  filesystem.rs  frontmatter.rs  ids.rs  lib.rs  storage.rs
crates/kata-storage/src/sqlite/: migrate.rs  mod.rs  serde_enums.rs  storage.rs
crates/kata-storage/tests/: archive.rs  filesystem.rs  sqlite.rs
docs/: SPEC.md
scripts/: gen-licenses.sh  web-licenses.ts
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.setup.ts
web/src/: App.svelte  app.css  main.ts
web/src/components/: AnnotationBubble.svelte  AnnotationComposer.svelte  Bubble.svelte  Chevron.svelte  CommentComposer.svelte  CommentComposer.test.ts  CommentThread.svelte  CommentThread.test.ts  CommitsPanel.svelte  CommitsPanel.test.ts  FileDiff.svelte  FileDiff.test.ts  FileSlot.svelte  FileTree.svelte  FileTree.test.ts  FileTreeNode.svelte  HunkLines.svelte  HunkLines.test.ts  HunkLinesSideBySide.svelte  HunkLinesSideBySide.test.ts  ResponseComposer.svelte  ResponseComposer.test.ts  ReviewList.svelte  ReviewSummary.svelte  ReviewViewer.svelte  SelectionPopup.svelte  SelectionPopup.test.ts
web/src/demo/: DemoOverlay.svelte  script.ts  types.ts
web/src/lib/: api.ts  clipboard.ts  diffCopy.test.ts  diffCopy.ts  diffSelection.test.ts  diffSelection.ts  events.ts  foldStore.test.ts  foldStore.ts  highlight.svelte.ts  hunkAlign.test.ts  hunkAlign.ts  intraLineSelection.test.ts  intraLineSelection.ts  linkHash.test.ts  linkHash.ts  markdown.test.ts  markdown.ts  patchsetSwap.test.ts  patchsetSwap.ts  resolution.test.ts  resolution.ts  selectionClamp.test.ts  selectionClamp.ts  tree.test.ts  tree.ts  types.ts  wordDiff.test.ts  wordDiff.ts
