[package]
name = "kata-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[features]
schema = ["dep:schemars"]
