[package]
name = "kata-demo"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
kata-core = { workspace = true }
kata-jj = { workspace = true }
kata-service = { workspace = true }
kata-storage = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
