[package]
name = "kata-mcp"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
kata-core = { workspace = true, features = ["schema"] }
kata-jj = { workspace = true }
kata-service = { workspace = true }
kata-storage = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
