[package]
name = "kata-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
mime_guess = { workspace = true }
kata-core = { workspace = true }
kata-jj = { workspace = true }
kata-mcp = { workspace = true }
kata-service = { workspace = true }
kata-storage = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }

[[bin]]
name = "kata"
path = "src/main.rs"
